--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,5 @@
-appnope==0.1.0
-attrs==18.2.0
-backcall==0.1.0
-bleach==3.1.0
-cloudpickle==0.6.1
-cycler==0.10.0
-dask==1.1.0
-decorator==4.3.0
-defusedxml==0.5.0
-entrypoints==0.3
-ipykernel==5.1.0
-ipython==7.3.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-jedi==0.13.3
-Jinja2==2.10
-jsonschema==3.0.0
-jupyter==1.0.0
-jupyter-client==5.2.4
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-kiwisolver==1.0.1
-MarkupSafe==1.1.1
-matplotlib==3.0.2
-mistune==0.8.4
-nbconvert==5.4.1
-nbformat==4.4.0
-networkx==2.2
-notebook==5.7.4
-numpy==1.16.0
-pandocfilters==1.4.2
-parso==0.3.4
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==5.4.1
-prometheus-client==0.6.0
-prompt-toolkit==2.0.9
-ptyprocess==0.6.0
-Pygments==2.3.1
-pyparsing==2.3.1
-pyrsistent==0.14.11
-python-dateutil==2.7.5
-PyWavelets==1.0.1
-PyYAML==3.13
-pyzmq==18.0.0
-qtconsole==4.4.3
-rise==5.4.1
-scikit-image==0.14.2
-scipy==1.2.0
-Send2Trash==1.5.0
-six==1.12.0
-terminado==0.8.1
-testpath==0.4.2
-toolz==0.9.0
-tornado==5.1.1
-traitlets==4.3.2
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.4.2
+matplotlib<=4.0
+notebook<=6.0
+numpy<=2.0
+scikit-image<=1.0
+scipy<=2.0
